# PiggleShop2

./: .gitignore  DEV.md  README.md
app-desktop/: Cargo.toml  tauri.conf.json
app-desktop/src/: main.rs
app-desktop/web/: index.html
app-mobile/apps/com.mochi.piggleshop/: index.html  manifest.json
client/: dev.html  piggle-sdk.js
client/shop/: app.jsx  catalog.dev.js  crystal.jsx  data.jsx  screens-browse.jsx  screens-buy.jsx  shop.css  ui.jsx
mod/: build.gradle  gradle.properties  settings.gradle
mod/src/main/java/jp/houlab/mochidsuki/piggleshop/: Catalog.java  CatalogMeta.java  CatalogService.java  PiggleShopExtension.java  PiggleShopMod.java
mod/src/main/java/jp/houlab/mochidsuki/piggleshop/aem/: AutoEconomicAPIProvider.java
mod/src/main/resources/piggleshop/: catalog.json
server/piggleshop-cs/: Cargo.toml  catalog.json
server/piggleshop-cs/src/: catalog.rs  grant.rs  main.rs  tls.rs
tools/: extract-textures.ps1  package.ps1  publish-piggleshop.ps1  run-cs.ps1
