[package]
name = "mochi-app-piggleshop"
version = "0.1.0"
edition = "2021"
description = "Piggle Shop Desktop — MochiOS in-world trading marketplace (Tauri)."

[[bin]]
name = "mochi-app-piggleshop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3"
